--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Roboto Mono";
-    src: url("../fonts/roboto-mono-medium.ttf");
+    src: url("../roboto-mono-medium.ttf");
 }
 
 :root {
